# websnap

./: Cargo.toml  README.md  main.py  websnap.spec
.cargo/: config.toml
pkg/: package.json  websnap.d.ts  websnap.js  websnap_bg.wasm  websnap_bg.wasm.d.ts
src/: lib.rs  main.rs
